spacing fixes

--- a/src/modules/bookingfrontend/client/src/components/building-calendar/modules/header/calendar-inner-header.module.scss
+++ b/src/modules/bookingfrontend/client/src/components/building-calendar/modules/header/calendar-inner-header.module.scss
@@ -5,22 +5,28 @@
     grid-area: inner-header;
     //justify-content: space-between;
     align-items: center;
-    gap:0.5rem;
+    column-gap: 0.5rem;
 
     display: grid;
-    grid-template-columns:auto auto 1fr auto auto;
-    grid-template-rows: auto;
-    grid-template-areas: "resource-button date mode-select-time mode-select order";
 
     @include mobile {
+        row-gap: 0.5rem;
         grid-template-columns:auto 1fr;
         grid-template-areas: "mode-select resource-button" "date date" "order order";
         //display: none;
     }
     @include tablet {
+        row-gap: 0.5rem;
         grid-template-columns:auto 1fr;
         grid-template-rows: auto auto;
         grid-template-areas: "mode-select resource-button" "resource-button date";
+        //display: none;
+    }
+    @include desktop {
+        row-gap: 0rem;
+        grid-template-columns:auto auto 1fr auto auto;
+        grid-template-rows: auto;
+        grid-template-areas: "resource-button date mode-select-time mode-select order";
         //display: none;
     }
     .orderButton {
@@ -84,6 +90,8 @@
 }
 
 .expandCollapseButton {
+    border: 1px solid #ccc;
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -96,7 +104,6 @@
     margin-left: 0;
     width: 300px;
 
-    border: 1px solid #eee;
 
     &.open {
         transform: rotate(0deg);
